--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dom.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tape ./test.js | tap-spec",
+    "coverage": "istanbul cover tape ./test.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/fac-14/team4week2#readme",
   "devDependencies": {
     "istanbul": "^0.4.5",
+    "nodemon": "^1.18.1",
     "nyc": "^12.0.2",
     "tap-spec": "^5.0.0",
     "tape": "^4.9.1"
