--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dom.js",
   "scripts": {
-    "test": "tape ./test.js | tap-spec",
+    "test": "nodemon test.js | tap-spec",
     "coverage": "istanbul cover tape ./test.js"
   },
   "repository": {
